--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "highlight.js": "^9.4.0",
     "history": "^4.7.2",
     "immutability-helper": "^2.7.0",
+    "is-touch-device": "^1.0.1",
     "jest": "^23.4.2",
     "jest-cli": "^23.4.2",
     "js-yaml": "^3.6.1",
