--- a/package.json
+++ b/package.json
@@ -218,7 +218,7 @@
     "react-notification-system": "^0.2.7",
     "react-player": "^1.6.4",
     "react-plotly.js": "^2.2.0",
-    "react-redux": "6.0.0",
+    "react-redux": "5.1.3",
     "react-router": "4.3.1",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0",
@@ -246,6 +246,11 @@
     "webpack": "4.27.1",
     "whatwg-fetch": "^3.0.0"
   },
+  "greenkeeper": {
+    "ignore": [
+      "react-redux"
+    ]
+  }
   "devEngines": {
     "node": "7.x || 8.x || 9.x || 10.x"
   }
