--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "null-loader": "^0.1.1",
     "react-hot-loader": "^4.3.1",
     "react-test-renderer": "16.6.3",
-    "redux-devtools": "^3.2.0",
+    "redux-devtools": "3.5.0-beta",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^3.0.0",
@@ -218,7 +218,7 @@
     "react-notification-system": "^0.2.7",
     "react-player": "^1.6.4",
     "react-plotly.js": "^2.2.0",
-    "react-redux": "5.1.1",
+    "react-redux": "6.0.0",
     "react-router": "4.3.1",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0",
