Add question form snippet

--- a/app/editor-components/editor/components.json
+++ b/app/editor-components/editor/components.json
@@ -70,7 +70,8 @@
 		"OrderQuestion",
 		"RangeQuestion",
 		"SelectQuestion",
-		"Quiz"
+		"Quiz",
+		"QuestionForm"
 	],
 	"SURVEY": [
 		"FreeTextSurvey",
