--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "redux-logger": "^3.0.0",
     "source-map-explorer": "^1.5.0",
     "stylelint": "^9.9.0",
+    "stylelint-config-standard": "^18.2.0",
     "uglifyjs-webpack-plugin": "^2.0.0",
     "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.1.11"
