--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "gitbook-plugin-prism": "^2.3.0",
     "highlight.js": "^9.4.0",
     "history": "^4.7.2",
+    "html-webpack-plugin": "^3.2.0",
     "immutability-helper": "^2.7.0",
     "is-touch-device": "^1.0.1",
     "jest": "^23.4.2",
@@ -192,7 +193,7 @@
     "node-libs-browser": "^2.0.0",
     "normalize.css": "^8.0.0",
     "pdfjs-dist": "^2.0.489",
-    "pdfmake-lite": "^0.1.36",
+    "pdfmake": "^0.1.40",
     "plotly.js": "^1.43.1",
     "pressure": "^2.1.2",
     "prismjs": "^1.6.0",
