--- a/app/snippets/components.json
+++ b/app/snippets/components.json
@@ -69,7 +69,7 @@
 	},
 	{
 		"name":"FreeTextQuestion",
-		"value":"<FreeTextQuestion\n\tquestion=\"${1:Enter question}\"\n\tsolution=\"${2:Enter solution}\n/>\n"
+		"value":"<FreeTextQuestion\n\tquestion=\"${1:Enter question}\"\n\tsolution=\"${2:Enter solution}\"\n/>\n"
 	},
 	{
 		"name":"FreeTextSurvey",
