--- a/package.json
+++ b/package.json
@@ -255,6 +255,6 @@
     ]
   },
   "devEngines": {
-    "node": "7.x || 8.x || 9.x || 10.x"
+    "node": "7.x || 8.x || 9.x || 10.x || 11.x"
   }
 }
