--- a/.travis.yml
+++ b/.travis.yml
@@ -14,19 +14,22 @@ addons:
     packages:
     - g++-4.8
 
+before_install:
+  - npm i -g npm@6.6.0
+
 install:
-- export CXX="g++-4.8"
-- npm install
-- "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+  - export CXX="g++-4.8"
+  - npm install
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
 
 before_script:
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start &
-- sleep 3
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start &
+  - sleep 3
 
 script:
-- npm run lint
-- npm run test
+  - npm run lint
+  - npm run test
 
 after_script:
-- npm run coverage
+  - npm run coverage
