--- a/package.json
+++ b/package.json
@@ -165,7 +165,6 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "file-loader": "^3.0.1",
     "form-data": "^2.2.0",
-    "fs-extra": "^7.0.0",
     "gitbook-plugin-edit-link": "^2.0.2",
     "gitbook-plugin-expandable-chapters": "^0.2.0",
     "gitbook-plugin-prism": "^2.3.0",
@@ -255,6 +254,6 @@
     ]
   },
   "devEngines": {
-    "node": "7.x || 8.x || 9.x || 10.x || 11.x"
+    "node": "9.x || 10.x || 11.x"
   }
 }
