--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "concurrently": "^4.0.0",
     "del": "^3.0.0",
     "doctrine": "^3.0.0",
-    "electron": "4.0.1",
+    "electron": "4.0.2",
     "electron-packager": "13.0.1",
     "enzyme": "3.8.0",
     "eslint": "^5.12.1",
@@ -114,7 +114,6 @@
     "source-map-explorer": "^1.5.0",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
-    "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.11"
   },
@@ -145,8 +144,6 @@
     "component-raf": "^1.2.0",
     "component-tween": "^1.2.0",
     "compute-chunkify": "0.0.0",
-    "compute-mean": "^3.0.0",
-    "compute-stdev": "^1.0.0",
     "configstore": "^4.0.0",
     "cross-env": "^5.1.5",
     "css": "^2.2.3",
@@ -157,7 +154,6 @@
     "d3": "5.7.0",
     "d3-cloud": "1.2.5",
     "debug": "^4.1.1",
-    "deep-equal": "^1.0.1",
     "detect-csv": "^1.1.0",
     "dompurify": "^1.0.9",
     "electron-window-state": "^5.0.0",
@@ -171,7 +167,6 @@
     "highlight.js": "^9.4.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
-    "immutability-helper": "^3.0.0",
     "is-touch-device": "^1.0.1",
     "jest": "^24.0.0",
     "jest-cli": "^24.0.0",
@@ -190,12 +185,10 @@
     "minimist": "^1.2.0",
     "moment": "2.24.0",
     "node-libs-browser": "^2.2.0",
-    "normalize.css": "^8.0.0",
     "pdfjs-dist": "^2.0.489",
     "pdfmake-lite": "^0.1.38",
     "plotly.js": "^1.43.2",
     "pressure": "^2.1.2",
-    "prismjs": "^1.6.0",
     "profanities": "^2.9.0",
     "prop-types": "^15.5.10",
     "raw-loader": "^1.0.0",
@@ -245,8 +238,7 @@
     "uuid": "^3.3.2",
     "venn.js": "0.2.20",
     "victory": "31.1.0",
-    "webpack": "4.28.4",
-    "whatwg-fetch": "^3.0.0"
+    "webpack": "4.28.4"
   },
   "greenkeeper": {
     "ignore": [
