Specify libs to be served from CDN

--- a/package.json
+++ b/package.json
@@ -183,10 +183,10 @@
     "markdown-it-katex": "^2.0.3",
     "markdown-it-sub": "^1.0.0",
     "minimist": "^1.2.0",
-    "moment": "2.24.0",
+    "moment": "2.23.0",
     "node-libs-browser": "^2.2.0",
     "pdfjs-dist": "^2.0.489",
-    "pdfmake-lite": "^0.1.38",
+    "pdfmake": "^0.1.40",
     "plotly.js": "^1.43.2",
     "pressure": "^2.1.2",
     "profanities": "^2.9.0",
